@@ -19,7 +19,6 @@ package cd.go.contrib.elasticagent;
 import org.junit.jupiter.api.Test;
 import org.skyscreamer.jsonassert.JSONAssert;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -32,13 +31,13 @@ public class AgentTest {
     @Test
     public void shouldSerializeToJSON() throws Exception {
         Agent agent = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
-        String agentsJSON = Agent.toJSONArray(Arrays.asList(agent));
+        String agentsJSON = Agent.toJSONArray(List.of(agent));
 
         JSONAssert.assertEquals("[{\"agent_id\":\"eeb9e0eb-1f12-4366-a5a5-59011810273b\",\"agent_state\":\"Building\",\"build_state\":\"Cancelled\",\"config_state\":\"Disabled\"}]", agentsJSON, true);
     }
 
     @Test
-    public void shouldDeserializeFromJSON() throws Exception {
+    public void shouldDeserializeFromJSON() {
         List<Agent> agents = Agent.fromJSONArray("[{\"agent_id\":\"eeb9e0eb-1f12-4366-a5a5-59011810273b\",\"agent_state\":\"Building\",\"build_state\":\"Cancelled\",\"config_state\":\"Disabled\"}]");
         assertThat(agents).hasSize(1);
 
@@ -51,7 +50,7 @@ public class AgentTest {
     }
 
     @Test
-    public void agentsWithSameAttributesShouldBeEqual() throws Exception {
+    public void agentsWithSameAttributesShouldBeEqual() {
         Agent agent1 = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
         Agent agent2 = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
 
@@ -59,21 +58,21 @@ public class AgentTest {
     }
 
     @Test
-    public void agentShouldEqualItself() throws Exception {
+    public void agentShouldEqualItself() {
         Agent agent = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
 
         assertEquals(agent, agent);
     }
 
     @Test
-    public void agentShouldNotEqualAnotherAgentWithDifferentAttributes() throws Exception {
+    public void agentShouldNotEqualAnotherAgentWithDifferentAttributes() {
         Agent agent = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
 
-        assertNotEquals(agent, new Agent());
+        assertNotEquals(new Agent(), agent);
     }
 
     @Test
-    public void agentsWithSameAttributesShareSameHashCode() throws Exception {
+    public void agentsWithSameAttributesShareSameHashCode() {
         Agent agent1 = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
         Agent agent2 = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
 
@@ -81,7 +80,7 @@ public class AgentTest {
     }
 
     @Test
-    public void agentsWithDifferentAttributesDoNotShareSameHashCode() throws Exception {
+    public void agentsWithDifferentAttributesDoNotShareSameHashCode() {
         Agent agent1 = new Agent("eeb9e0eb-1f12-4366-a5a5-59011810273b", Agent.AgentState.Building, Agent.BuildState.Cancelled, Agent.ConfigState.Disabled);
         Agent agent2 = new Agent();
 
