@@ -38,8 +38,8 @@ import org.mockito.Answers;
 import org.mockito.Mock;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static cd.go.contrib.elasticagent.Constants.JOB_IDENTIFIER_LABEL_KEY;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -59,7 +59,7 @@ public class AgentStatusReportExecutorTest {
     @Mock
     private PluginRequest pluginRequest;
 
-    @Mock
+    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
     private KubernetesClientFactory kubernetesClientFactory;
 
     @Mock(answer = Answers.RETURNS_DEEP_STUBS)
@@ -101,7 +101,7 @@ public class AgentStatusReportExecutorTest {
 
         when(client.pods()).thenReturn(mockedOperation);
         when(mockedOperation.list()).thenReturn(podList);
-        when(podList.getItems()).thenReturn(Arrays.asList(pod));
+        when(podList.getItems()).thenReturn(List.of(pod));
 
         when(mockedOperation.withName(elasticAgentId)).thenReturn(podresource);
         when(podresource.inContainer("test-container")).thenReturn(containerResource);
@@ -122,7 +122,7 @@ public class AgentStatusReportExecutorTest {
         ClusterProfileProperties clusterProfileProperties = new ClusterProfileProperties();
 
         when(statusReportRequest.clusterProfileProperties()).thenReturn(clusterProfileProperties);
-        when(kubernetesClientFactory.client(clusterProfileProperties)).thenReturn(client);
+        when(kubernetesClientFactory.client(clusterProfileProperties).get()).thenReturn(client);
 
         when(builder.getTemplate("agent-status-report.template.ftlh")).thenReturn(template);
         when(builder.build(eq(template), any(KubernetesElasticAgent.class))).thenReturn("my-view");
@@ -143,7 +143,7 @@ public class AgentStatusReportExecutorTest {
         ClusterProfileProperties clusterProfileProperties = new ClusterProfileProperties();
 
         when(statusReportRequest.clusterProfileProperties()).thenReturn(clusterProfileProperties);
-        when(kubernetesClientFactory.client(clusterProfileProperties)).thenReturn(client);
+        when(kubernetesClientFactory.client(clusterProfileProperties).get()).thenReturn(client);
 
         when(builder.getTemplate("error.template.ftlh")).thenReturn(template);
         when(builder.build(eq(template), any(StatusReportGenerationError.class))).thenReturn("my-error-view");
@@ -165,7 +165,7 @@ public class AgentStatusReportExecutorTest {
         ClusterProfileProperties clusterProfileProperties = new ClusterProfileProperties();
 
         when(statusReportRequest.clusterProfileProperties()).thenReturn(clusterProfileProperties);
-        when(kubernetesClientFactory.client(clusterProfileProperties)).thenReturn(client);
+        when(kubernetesClientFactory.client(clusterProfileProperties).get()).thenReturn(client);
 
         when(builder.getTemplate("error.template.ftlh")).thenReturn(template);
         when(builder.build(eq(template), any(StatusReportGenerationError.class))).thenReturn("my-error-view");
@@ -180,10 +180,10 @@ public class AgentStatusReportExecutorTest {
         Pod pod = new Pod();
         pod.setMetadata(new ObjectMeta());
         PodSpec spec = new PodSpec();
-        spec.setContainers(Arrays.asList(aContainer()));
+        spec.setContainers(List.of(aContainer()));
         pod.setSpec(spec);
         PodStatus status = new PodStatus();
-        status.setContainerStatuses(Arrays.asList(aContainerStatus()));
+        status.setContainerStatuses(List.of(aContainerStatus()));
         pod.setStatus(status);
         pod.getMetadata().setAnnotations(Collections.singletonMap(JOB_IDENTIFIER_LABEL_KEY, "{}"));
         return pod;
